--- a/WashingtonYandun_phone/MainPage.xaml
+++ b/WashingtonYandun_phone/MainPage.xaml
@@ -7,35 +7,57 @@
         <VerticalStackLayout
             Spacing="25"
             Padding="30,0"
-            VerticalOptions="Center">
+            VerticalOptions="CenterAndExpand">
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+            <!--input-->
+            <StackLayout>
+                <Label
+                    Text="Ingrese Numero de Telefono"
+                    SemanticProperties.HeadingLevel="Level1"
+                    FontSize="32"
+                    HorizontalOptions="Center" />
 
-            <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+                <Entry
+                    Placeholder="Ingrese Su telefono"
+                    Margin="10,10,10,10"
+                    FontSize="20"
+                    MaximumWidthRequest="400"
+                    MinimumWidthRequest="300">
+                </Entry>
+            </StackLayout>
+            
+            <!--dev-->
+            <StackLayout>
+                <FlexLayout>
+                    <!--combo-->
+                    <StackLayout>
+                        
+                    </StackLayout>
+                    <!--button-->
+                    <StackLayout>
+                        
+                    </StackLayout>
+                </FlexLayout>
+            </StackLayout>
+           
+            
+            <!--result-->
+            <StackLayout>
+                <Label
+                    Text=":"
+                    x:Name="wy_result"
+                    FontSize="20"
+                    HorizontalOptions="Center"
+                    Margin="15,15,15,15"/>
 
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
-
+                <Button
+                    x:Name="wy_recharge"
+                    Text="Recargar"
+                    SemanticProperties.Hint="Counts the number of times you click"
+                    Clicked="OnCounterClicked"
+                    HorizontalOptions="Center" />
+            </StackLayout>
+            
         </VerticalStackLayout>
     </ScrollView>
-
 </ContentPage>
